# stm32-cmake-cpp-sandbox

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  cmake303.ioc  startup_stm32f303xc.s
Core/Src/: gpio.c  i2c.c  main.c  spi.c  usb.c
Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f3xx.h
